<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer"
    style="@style/drawer_color"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/detail_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:src="@drawable/friend_new"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_name"
                style="@style/sideMenuTxtStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Navin Prasad"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_address"
                style="@style/sideMenuTxtStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="0dp"
                android:text="London United Kingdom" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_hacker_news"
                style="@style/sideMenuItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hacker_news"
                    style="@style/sideMenuTxtStyle"
                    android:drawableLeft="@drawable/side_notification"
                    android:text="@string/hacker_news" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_news"
                style="@style/sideMenuItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_news"
                    style="@style/sideMenuTxtStyle"
                    android:drawableLeft="@drawable/side_social"
                    android:text="@string/news" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_show"
                style="@style/sideMenuItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_show"
                    style="@style/sideMenuTxtStyle"
                    android:drawableLeft="@drawable/side_history"
                    android:text="@string/show" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_ask"
                style="@style/sideMenuItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_ask"
                    style="@style/sideMenuTxtStyle"
                    android:drawableLeft="@drawable/side_location"
                    android:text="@string/ask" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_job"
                style="@style/sideMenuItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_job"
                    style="@style/sideMenuTxtStyle"
                    android:drawableLeft="@drawable/side_faq"
                    android:text="@string/jobs" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_submit"
                style="@style/sideMenuItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_submit"
                    style="@style/sideMenuTxtStyle"
                    android:drawableLeft="@drawable/side_contact"
                    android:text="@string/submit" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_logout"
                style="@style/sideMenuItemMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_log_out"
                    style="@style/sideMenuTxtStyle"
                    android:drawableLeft="@drawable/side_logout"
                    android:text="@string/log_out" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
